# cao

./: Cargo.toml  README.md
ddd/: Cargo.toml  README.md
ddd/examples/: clay.rs  cone.rs
ddd/examples/clay/: README.md  main.rs
ddd/examples/cone/: README.md  main.rs
ddd/shaders/: copy.frag  copy.frag.spv  cube_buffer.vert  cube_buffer.vert.spv  cube_push.vert  screen.vert  screen.vert.spv  screen_d.vert  screen_d.vert.spv
ddd/shaders/clay/: camera.vert.spv  compile.sh  flat.frag  flat.frag.spv  flat.vert  flat.vert.spv  smooth.frag  smooth.frag.spv  smooth.vert  smooth.vert.spv  solid.frag  solid.frag.spv  solid.vert  solid.vert.spv
ddd/shaders/cone/: cube_push.vert.spv  screen.vert  screen.vert.spv  utils.glsl
ddd/shaders/cone/creation/: ibl_brdf.frag  ibl_brdf.frag.spv  ibl_diffuse.frag  ibl_diffuse.frag.spv  ibl_specular.frag  ibl_specular.frag.spv  skybox.frag  skybox.frag.spv  utils.glsl
ddd/shaders/cone/environment/: ambient.frag  ambient.frag.spv  compile.sh  environment.frag  environment.frag.spv  utils.glsl
ddd/shaders/cone/point_light_passes/: base.frag  base.frag.spv  base_clipped.vert  base_clipped.vert.spv  base_full.vert  base_full.vert.spv  compile.sh  depth_calc.comp  depth_calc.comp.spv  shadow.frag  shadow.frag.spv  single_base.frag  single_base.frag.spv  single_shadow.frag  single_shadow.frag.spv  single_subsurface.frag  single_subsurface.frag.spv  subsurface.frag  subsurface.frag.spv  tile_assign.comp  tile_assign.comp.spv  tile_base.comp  tile_base.comp.spv  tile_shadow.comp  tile_shadow.comp.spv  tile_subsurface.comp  tile_subsurface.comp.spv  utils.glsl
ddd/shaders/cone/postprocess/: aces.frag  aces.frag.spv  ao_blur.frag  ao_blur.frag.spv  ao_calc.frag  ao_calc.frag.spv  bloom_blur.frag  bloom_blur.frag.spv  bloom_prefilter.frag  bloom_prefilter.frag.spv  chain_blur.frag  chain_blur.frag.spv  compile.sh  display.vert  display.vert.spv  full_gauss_blur.frag  full_gauss_blur.frag.spv  reinhard.frag  reinhard.frag.spv  skybox.frag  skybox.frag.spv  split_gauss_blur.frag  split_gauss_blur.frag.spv  tonemap_global.frag  tonemap_global.frag.spv
ddd/shaders/fxaa/: fxaa.frag
ddd/shaders/smaa/: blending_weight.frag  blending_weight.vert  color_edge_detect.frag  compile.sh  depth_edge_detect.frag  edge_detect.vert  luma_edge_detect.frag  neighborhood_blending.vert  neighborhood_blending_aces.frag  neighborhood_blending_clip.frag  neighborhood_blending_reinhard.frag
ddd/src/: clay.rs  lib.rs  prelude.rs  tmp.rs
ddd/src/clay/: mod.rs  solid.rs
ddd/src/cone/: gbuffer.rs  material.rs  mod.rs
ddd/src/utils/: copy.rs  display.rs  instance.rs  mod.rs  vertices.rs
gfx/: Cargo.toml  README.md
gfx/examples/fluid/: README.md  advection.frag  advection.spv  basic_vertex.spv  basic_vertex.vert  clear.frag  clear.spv  curl.frag  curl.spv  display.frag  display.spv  divergence.frag  divergence.spv  gradient_sub.frag  gradient_sub.spv  main.rs  pressure.frag  pressure.spv  splat.frag  splat.spv  vorticity.frag  vorticity.spv
gfx/examples/fractal/: README.md  display.frag  display_frag.spv  fractal.frag  fractal_frag.spv  main.rs
gfx/examples/slime/: README.md  display.frag  display.vert  display_frag.spv  display_vert.spv  fade.comp  fade.spv  main.rs  update.comp  update.spv
gfx/gfx_derive/: Cargo.toml
gfx/gfx_derive/examples/: alias.rs  basic.rs
gfx/gfx_derive/src/: lib.rs
gfx/src/: lib.rs  prelude.rs  storage.rs  uniform.rs
gfx/src/encoder/: command.rs  mod.rs
gfx/src/mesh/: mod.rs  vertex.rs
gfx/src/pass/: compute.rs  graphics.rs  mod.rs
gfx/src/reflect/: bundle.rs  compute.rs  data.rs  error.rs  graphics.rs  mod.rs  raw.rs  reflect_raw.rs  resource.rs  spirv_raw.rs
gfx/src/texture/: formats.rs  mod.rs  traits.rs
gpu/: Cargo.toml  README.md
gpu/examples/basic/: main.rs
gpu/examples/clear/: main.rs
gpu/examples/compute/: comp.spv  main.comp  main.rs
gpu/examples/depth/: frag.spv  main.frag  main.rs  main.vert  vert.spv
gpu/examples/push_constants/: frag.spv  main.frag  main.rs
gpu/examples/texture/: frag.spv  main.frag  main.rs  main.vert  vert.spv
gpu/examples/triangle/: main.rs  main.vert  vert.spv
gpu/examples/uniform_array/: frag.spv  main.frag  main.rs
gpu/gpu_derive/: Cargo.toml
gpu/gpu_derive/src/: lib.rs
gpu/src/: binding.rs  buffer.rs  data.rs  desc.rs  device.rs  error.rs  ffi.rs  format.rs  lib.rs  pass.rs  pipeline.rs  query.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  utils.rs
gpu/src/command/: buffer.rs  garbage.rs  mod.rs  raw.rs
gpu/src/device/: mod.rs  raw.rs  utils.rs
gpu/src_old/: buffer.rs  data.rs  error.rs  ffi.rs  lib.rs  pass.rs  swapchain.rs  texture.rs
gpu/src_old/command/: buffer.rs  mod.rs  raw.rs
gpu/src_old/device/: mod.rs  raw.rs  utils.rs
mesh/: Cargo.toml  README.md
mesh/src/: cull_lod.rs  defaults.rs  lib.rs  tangent.rs
mesh/src/loading/: error.rs  mod.rs  obj.rs
spirv/: Cargo.toml  README.md
spirv/examples/: basic.rs  help.rs  texture.rs  uniform.rs
spirv/src/: function.rs  interface.rs  lib.rs  specialisation.rs
spirv/src/builder/: base_builder.rs  condition_builder.rs  fn_builder.rs  instruction.rs  loop_builder.rs  main_builder.rs  mod.rs  var.rs
spirv/src/data/: as_ty.rs  mod.rs  ops.rs  shuffle.py  spv_array.rs  spv_struct.rs  ty_structs.rs
spirv/src/texture/: mod.rs
spv/: Cargo.toml  README.md  test.frag  test.frag.spv
spv/examples/: basic.rs  camera.rs  condition.rs  discard.rs  help.rs  maths.rs  push_constant.rs  push_constants.rs  storage.rs  texture.rs  uniform.rs
spv/spv_derive/: Cargo.toml
spv/spv_derive/src/: lib.rs
spv/src/: bindings.rs  builder.rs  func.rs  function.rs  instruction.rs  interface.rs  io.rs  lib.rs  prelude.rs  sampler.rs  scope.rs  specialisation.rs
spv/src/builder/: base_builder.rs  condition_builder.rs  fn_builder.rs  instruction.rs  loop_builder.rs  main_builder.rs  mod.rs
spv/src/data/: as_ty.rs  dynamic.rs  mod.rs  ops.rs  spv_array.rs  spv_struct.rs  ty_structs.rs  typed.rs
spv/src/spv-derive/: Cargo.toml
spv/src/texture/: component.rs  mod.rs
(+83 files in other folders)
