[package]
name = "gfx"
version = "0.1.0"
edition = "2021"

[features]
default            = ["all"]
all                = ["image", "png", "jpeg", "gif", "tiff", "hdr", "reflect", "spirv"]

jpeg               = ["image", "image/jpeg"]
png                = ["image", "image/png"]
gif                = ["image", "image/gif"]
tiff               = ["image", "image/tiff"]
hdr                = ["image", "image/hdr"]

reflect            = ["spirv-reflect", "spirv_headers"]

spirv              = ["reflect", "spv", "either"]

[dependencies]
gpu                = { path = "../gpu" }
bytemuck           = "^1.4.1"
parking_lot        = "^0.11.1"
spirv-reflect      = { version = "^0.2.3", optional=true }
spirv_headers      = { version = "^1.5.0", optional=true }
image              = { version = "^0.23.12", default-features=false, optional=true }
spv                = { path = "../spv", optional=true }
either             = { version = "^1.6.1", optional=true }

[dev-dependencies]
winit              = { version = "0.26.1", default-features = false, features = ["x11"] }
winit_input_helper = { git = "https://github.com/JeremyS2002/winit_input_helper.git", branch = "master" }
anyhow             = "1.0.57"
rand               = "0.8.5"

[[example]]
name = "fractal"

[[example]]
name = "slime"

[[example]]
name = "fluid"