[package]
name = "gfx"
version = "0.1.0"
edition = "2024"

[features]
default            = ["all"]
all                = ["image", "png", "jpeg", "gif", "tiff", "hdr", "reflect", "spv", "logging"]

jpeg               = ["image", "image/jpeg"]
png                = ["image", "image/png"]
gif                = ["image", "image/gif"]
tiff               = ["image", "image/tiff"]
hdr                = ["image", "image/hdr"]

reflect            = ["spirq"]

logging            = ["log", "gpu/logging"]

[dependencies]
gpu                = { path = "../gpu" }
gfx_derive         = { path = "../gfx/gfx_derive" }
bytemuck           = { version = "^1.23.1", features=["extern_crate_alloc"] }
parking_lot        = "^0.12.4"
glam               = { version = "^0.30.4", features = ["bytemuck"] }
spirq              = { version = "^1.2.2", optional=true }
# spirq              = { git = "https://github.com/JeremyS2002/spirq-rs.git", optional=true }
image              = { version = "^0.25.6", default-features=false, optional=true }
spv                = { path = "../spv", optional=true }
either             = { version = "^1.15.0", optional=true }
log                = { version = "^0.4.27", optional=true }

[dev-dependencies]
winit              = { version = "^0.30.11", default-features = false, features = ["x11", "rwh_06"] }
winit_input_helper = { git = "ssh://git@github.com/JeremyS2002/winit_input_helper.git", branch = "master" }
anyhow             = "^1.0.98"
rand               = "^0.9.1"

[[example]]
name = "fractal"

[[example]]
name = "slime"

[[example]]
name = "fluid"