[package]
name = "gpu"
version = "0.1.0"
edition = "2024"

[features]
logging            = ["log"]

ray                = []
mesh               = []

[dependencies]
ash                = "^0.38.0"
raw-window-handle  = "^0.6.2"
bitflags           = "^2.9.1"
lazy_static        = "^1.5.0"
parking_lot        = "^0.12.4"
bytemuck           = "^1.23.1"

log                = { version = "^0.4.27", optional = true }

[target.'cfg(target_os = "^macos")'.dependencies]
metal              = "^0.20.0"
cocoa              = "^0.24.0"
objc               = "^0.2.7"

[target.'cfg(target_os = "^windows")'.dependencies]
winapi             = { version = "^0.3.9", features = ["windef", "libloaderapi"] }

[dev-dependencies]
image              = "^0.25.6"
winit              = { version = "^0.30.11", default-features = false, features = ["x11", "rwh_06"] }
glam               = { version = "^0.30.4", features = ["bytemuck"] }
env_logger         = "0.11.8"


[[example]]
name = "basic"

[[example]]
name = "clear"

[[example]]
name = "triangle"

[[example]]
name = "texture"

[[example]]
name = "push_constants"

[[example]]
name = "compute"