[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["loading"]

loading = ["tobj"]

[dependencies]
glam               = { version = "0.21.2", features = ["bytemuck"] }
bytemuck           = "^1.4.1"
gpu                = { path="../gpu" }
gfx                = { path="../gfx", default-features=false }
tobj               = { version = "3.2.3", optional=true }
