[package]
name = "spirv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv      = "^0.11.0"
glam        = "^0.20.5"
slab        = "^0.4.6"
either      = "^1.6.1"

[dev-dependencies]
shaderc     = "*"
gpu         = { path = "../gpu" }
bytemuck    = "*"
winit       = "0.26.1"
env_logger  = "0.9.0"

[[example]]
name        = "basic"