[package]
name = "spv"
version = "0.1.0"
edition = "2024"

[dependencies]
rspirv             = "^0.12.0"
glam               = "^0.30.4"
either             = "^1.15.0"
slab               = "^0.4.9"
spv_derive         = { path = "../spv/spv_derive" }

[dev-dependencies]
shaderc            = "^0.9.1"
bytemuck           = "^1.23.1"
winit              = { version = "^0.30.11", default-features = false, features = ["x11"] }
image              = "^0.25.6"
gpu                = { path = "../gpu" }

[[example]]
name = "basic"

[[example]]
name = "uniform"

[[example]]
name = "push_constants"

[[example]]
name = "camera"

[[example]]
name = "help"