[package]
name = "spv_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn           = { version = "^1.0.99", features=["printing", "extra-traits"] }
quote         = "^1.0.21"
proc-macro2   = "^1.0.43"